--- a/templates/base.html
+++ b/templates/base.html
@@ -57,19 +57,19 @@
               <a href="/create">Create a New Info Card</a>
             </li>
             <li>
+              <a href="/display_infos">Find Infos in Hedgehog</a>
+            </li>
+            <li>
               <a href="/new">Create a New Study Guide</a>
-            </li>
-            <li>
-              <a href="/memeonic">Meme-onic Generator</a>
-            </li>
-            <li>
-              <a href="/display_infos">Display Your Infos</a>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Your Study Guides<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li class="dropdown-header">Here are study guides you made!</li>
               </ul>
+            </li>
+            <li>
+              <a href="/memeonic">Meme-onic Generator</a>
             </li>
             
             <li class="dropdown">
@@ -119,7 +119,7 @@
               </ul>
             </li>
             <li>
-              <a href="/database">(Developer's Only) Database Adminstration</a>
+              <a href="/database">(Developers Only) Database Adminstration</a>
             </li>
             <div class="footer">
               <p>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
