--- a/templates/database_admin.html
+++ b/templates/database_admin.html
@@ -14,7 +14,7 @@
   <p>Welcome, {{ user.name }}.</p>
   <h2>Tags</h2>
   <table id="tags">
-    <tr><th></th><th>Name</th><th>ObjectId</th></tr>
+    <tr><th></th><th>Name</th></tr>
   </table>
   <h2>Info</h2>
   <table id="info">
