--- a/templates/display_infos.html
+++ b/templates/display_infos.html
@@ -8,7 +8,7 @@
 
 <center>
   <div class="container">
-    <h1>Here are All the Info Cards in the Hedgehog Database</h1>
+    <h1>Info Cards in the Hedgehog Database</h1>
 </form>
 </div>
 <br>
