--- a/templates/displaying.html
+++ b/templates/displaying.html
@@ -11,15 +11,18 @@
   </head>
   <body>
     <center>
-      <h1>Displaying Infos</h1>
-      <p>Welcome, {{ user.name }}.</p>
       <h2>Tags</h2>
       <table id="tags">
 	<tr><th></th><th>Name</th></tr>
       </table>
       <h2>Info</h2>
       <table id="info">
-	<tr><th></th><th>Title</th><th>Body</th></tr>
+	<tr>
+	  <th></th>
+	  <th>Title</th>
+	  <th>Body</th>
+	  <th>Author</th>
+	</tr>
       </table>
       
       <script type="text/javascript"
