--- a/templates/home.html
+++ b/templates/home.html
@@ -70,6 +70,15 @@
     </div>
   </div>
 </div>
+
+<center>
+<br>
+(<u>Developer's Note</u>: This page is currently under construction. Clicking Subjects does nothing.)
+<br>
+<br>
+<br>
+</center>
+
 <!-- /#page-content-wrapper -->
 
 <!-- THIS NEEDS TO BE INCLUDED IN THE FOOTER BECAUSE I GOT THE VECTOR ICONS FOR FREE -->
