--- a/templates/create.html
+++ b/templates/create.html
@@ -46,7 +46,7 @@
       </form>
     </div>
     <br>
-    <a href="/display_infos">See your created card</a>
+    <u><a href="/display_infos">See your created card</a></u>
 
     <hr>
     
