--- a/templates/display_infos.html
+++ b/templates/display_infos.html
@@ -17,9 +17,12 @@
   <object data="/displaying/" width="600" height="400"
 	  style="width:100%; height: 400px;"> <embed src="/displaying/"> </embed> Error: Embedded data could not be displayed. </object>
 
+<u><a href="/create">Or go to create a New Info Card</a></u>
+<br>
+<br>
+
 </center>
 {% endblock %}
-
 
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/info.js') }}"></script>
