--- a/templates/new.html
+++ b/templates/new.html
@@ -70,10 +70,9 @@ body
 <center>
   <div class="container">
     <button onclick="myFunction()">EDIT DOC</button>
-    <button onclick="stop()">SUBMIT</button>
-    <br><br>
+    <button onclick="stop()">SUBMIT</button>    <br><br>
     <div class="box" align="left" style="width:700px; height: 800px;">
-      <p id="myP">
+      <p id="myP" name="myP">
 	TITLE
 	<br>
 	<br>
