getting image using flickr api

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,14 @@
 {% block title %}Hedgehog{% endblock %}
 
 {% block content %}
+<div class="container" style="width:800px;">
+  <h1>
+    <center>
+      <a href="https://www.youtube.com/watch?v=hCkLKiRzNuE&feature=youtu.be">Check Out our Video Here!</a>
+    </center>
+  </h1>
+</div>
+
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
