small misc changes

--- a/templates/create.html
+++ b/templates/create.html
@@ -46,8 +46,7 @@
       </form>
     </div>
     <br>
-    <u><a href="/display_infos">See your created card</a></u>
-
+    <u><a href="{{ url_for('display_infos') }}">See your created card</a></u>
     <hr>
     
     <!-- Box for assisted search -->
