--- a/templates/display_infos.html
+++ b/templates/display_infos.html
@@ -17,7 +17,7 @@
   <object data="/displaying/" width="600" height="400"
 	  style="width:100%; height: 400px;"> <embed src="/displaying/"> </embed> Error: Embedded data could not be displayed. </object>
 
-<u><a href="/create">Or go to create a New Info Card</a></u>
+<u><a href="{{url_for('create')}}">Or go to create a New Info Card</a></u>
 <br>
 <br>
 
