--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,9 @@
 <div class="container" style="width:800px;">
   <h1>
     <center>
-      <a href="https://www.youtube.com/watch?v=hCkLKiRzNuE&feature=youtu.be">Check Out our Video Here!</a>
+      <a href="https://www.youtube.com/watch?v=hCkLKiRzNuE&feature=youtu.be" class="add-note">Check Out our Video Here!</a>
+      <br>
+      <a href="https://github.com/leoncheng57/Hedgehog"> ...as well as our code here</a>
     </center>
   </h1>
 </div>
