--- a/templates/create.html
+++ b/templates/create.html
@@ -47,6 +47,8 @@
     </div>
     <br>
     <u><a href="{{ url_for('display_infos') }}">See your created card</a></u>
+    <br>
+    <u><a href="{{ url_for('memeonic') }}">Meme-onic Generator</a></u>
     <hr>
     
     <!-- Box for assisted search -->
